--- a/style.css
+++ b/style.css
@@ -1,14 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600display=swap');
 *{
     box-sizing: border-box;
 }
+:root{
+    --border-color: #144fc6
+}
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #3494e4;
+    color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
+    margin-bottom: 40px;
+}
+h1{
+    margin: 10px 0 0;
+}
+h3{
+    font-weight: 400;
+    margin: 10px 0;
+}
+.cup{
+    background-color: #fff;
+    border: 4px solid var(--border-color);
+    color: var(--border-color);
+    border-radius: 0 0 40px 40px;
+    height: 330px;
+    width: 150px;
+    margin: 30px 0;
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
-    margin: 0;
+}
+.cup.cup-small{
+    width: 50px;
+    height: 95px;
 }
