--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     box-sizing: border-box;
 }
 :root{
-    --border-color: #144fc6
+    --border-color: #144fc6;
+    --fill-color: #6ab3f8;
 }
 body{
     font-family: 'Montserrat', sans-serif;
@@ -36,4 +37,54 @@ h3{
 .cup.cup-small{
     width: 50px;
     height: 95px;
+    border-radius: 0 0 15px 15px;
+    background-color: rgba(255, 255, 255, 0.9);
+    cursor: pointer;
+    font-size: 14px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 5px;
+    transition: 0.3s ease;
+}
+.cups{
+    display: flex;
+    flex-wrap: wrap;
+    width: 280px;
+    align-items: center;
+    justify-content: center;
+}
+.cup.cup-small.full{
+    background-color: var(--fill-color);
+    color:#fff;
+}
+.remained{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    flex: 1;
+    transition: 0.3s ease;
+}
+.remained span{
+    font-size: 20px;
+    font-weight: bold;
+}
+.remained small{
+    font-size: 12px;
+}
+.percentage{
+background-color: var(--fill-color);
+font-size: 30px;
+font-weight: bold;
+display: flex;
+align-items: center;
+justify-content: center;
+height: 0;
+transition: 0.3s ease;
+}
+.text{
+    text-align: center;
+    margin: 0 0 5px;
 }
